--- a/app/views/about.html
+++ b/app/views/about.html
@@ -3,8 +3,8 @@
 <div class="centrer fond-bleu" id="fonfonfond" style="background: url('images/fond_haut.jpg') center center;">
   <div class="inside" id="inside-1">
     <p><a href="." id="lien-logo-header"><img style="border-radius: 50%;" src='images/jm4_export.png' height="100"/></a></p>
-    <h1 class="">Jordan Mosseri.</h1>
-    <h2 class="">Ingénieur en Systèmes d'Information.</h2>
+    <h1 class="">{{model.name}}</h1>
+    <h2 class="">{{model.degree}}</h2>
   </div>
 </div>
 
@@ -20,38 +20,20 @@
 
     <h2>Quelques mots</h2>
     <p style="text-align: justify; text-indent: 20px;">
-      Je suis passionné de nouvelles technologies, en particulier dans le domaine du web et du mobile.
-      Créatif, je porte une attention particulière à l'ergonomie et à l'experience utilisateur.
-      Mes différents stages et projets m'ont permis de développer mon autonomie et ma capacité d'adaptation.
-      Je travaille actuellement sur un projet dans lequel je développe une application Android.
-      Je recherche un stage de 6 mois à partir de février 2015, me contacter pour plus d'infos.
+      {{model.descr}}
     </p>
     <table id="table-specialites">
       <tr>
-        <td>
-          <i class="fa fa-mobile {{iconsSize}}"></i><h3>Mobile</h3>
-        </td>
-        <td>
-          <i class="fa fa-globe {{iconsSize}}"></i><h3>Web</h3>
-        </td>
-        <td>
-          <i class="fa fa-cube {{iconsSize}}"></i><h3>Infographisme</h3>
+        <td ng-repeat="skill in skills">
+          <i class="fa {{skill.icon}} {{iconsSize}}"></i><h3>{{skill.title}}</h3>
         </td>
       </tr>
       <tr>
-        <td>
+        <td ng-repeat="skill in skills">
           <ul>
-            <li>Android</li> <li>iOS</li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li>Standards</li> <li>jQuery</li> <li>PHP</li> <li>JEE</li> <li>Joomla</li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li>Blender 3D</li> <li>Photoshop</li>
+            <li ng-repeat="item in skill.content">
+              {{item}}
+            </li>
           </ul>
         </td>
       </tr>
@@ -79,21 +61,21 @@
     <!--<p><a href="CV-MOSSERI.jpg" target="_blank"><img class="" id="preview-cv" src="CV-MOSSERI_mini.png"/></a></p>-->
 
     <p>
-    <table id="table-cv" class="ne_pas_afficher_en_mobile">
-      <tr>
-        <td>
-          <!--<a href="CV-MOSSERI.jpg" target="_blank" class="lien-arrondi" style="width:150px;height:150px;line-height: 150px;background:#fa0;font-size: 2.2em;">CV</a>-->
-          <p class="curriculum-vitae" style="text-align: right;">Curriculum</p>
-        </td>
-        <td>
-          <a href="images/CV-MOSSERI.jpg" target="_blank" id="lien-cv-test-parallax" style="" ></a>
-        </td>
-        <td>
-          <!--<a class="lien-arrondi" style="width:80px;height:80px;line-height: 80px;background:#fa0;font-size: 1.5em; opacity:0.7;" href="CV-MOSSERI.pdf" target="_blank">PDF</a>-->
-          <p class="curriculum-vitae" style="text-align: left;">Vitae</p>
-        </td>
-      </tr>
-    </table>
+      <table id="table-cv" class="ne_pas_afficher_en_mobile">
+        <tr>
+          <td>
+            <!--<a href="CV-MOSSERI.jpg" target="_blank" class="lien-arrondi" style="width:150px;height:150px;line-height: 150px;background:#fa0;font-size: 2.2em;">CV</a>-->
+            <p class="curriculum-vitae" style="text-align: right;">Curriculum</p>
+          </td>
+          <td>
+            <a href="images/CV-MOSSERI.jpg" target="_blank" id="lien-cv-test-parallax" style="" ></a>
+          </td>
+          <td>
+            <!--<a class="lien-arrondi" style="width:80px;height:80px;line-height: 80px;background:#fa0;font-size: 1.5em; opacity:0.7;" href="CV-MOSSERI.pdf" target="_blank">PDF</a>-->
+            <p class="curriculum-vitae" style="text-align: left;">Vitae</p>
+          </td>
+        </tr>
+      </table>
     </p>
     <p class="afficher_en_mobile">
       <a href="images/CV-MOSSERI.jpg" target="_blank" id="" style="" ><img src="images/CV-MOSSERI_gris_mobile.png"/></a>
@@ -121,11 +103,11 @@
   <div class="inside">
     <p style="font-style: italic;margin:0;">
       Jordan Mosseri &copy; Tous droits réservés
-                <span id="icones-footer">
-                    <a id="lienIn" href="http://fr.linkedin.com/pub/jordan-mosseri/63/170/7b5" target="_blank"><img src="images/blank.png" alt="logo_in" /></a>
-                    <!-- http://www.linkedin.com/profile/view?id=224343929 -->
-                    <a id="lienContact" href="mailto:mosseri@ece.fr"><img src="images/blank.png" alt="icon mail" /></a>
-                </span>
+      <span id="icones-footer">
+          <a id="lienIn" href="http://fr.linkedin.com/pub/jordan-mosseri/63/170/7b5" target="_blank"><img src="images/blank.png" alt="logo_in" /></a>
+          <!-- http://www.linkedin.com/profile/view?id=224343929 -->
+          <a id="lienContact" href="mailto:mosseri@ece.fr"><img src="images/blank.png" alt="icon mail" /></a>
+      </span>
     </p>
   </div>
 </div>
@@ -138,23 +120,7 @@
     }
   </style>
 </noscript>
-<style>
-  #vue-grand-voile, #vue-grand-descr, #vue-grand-fermer{
-    opacity:0;
-    visibility: hidden;
-  }
-  #vue-grand-voile, #vue-grand, #vue-grand-descr, #vue-grand-fermer{
-    position:fixed;
-  }
-  #vue-grand-voile, #vue-grand{
-    top:0;left:0;
-  }
 
-  #anim-wrapper, #anim-rond{
-    position:absolute;
-    pointer-events: none;
-  }
-</style>
 <div id="vue-grand-voile" style="width: 100%;height:100%;background: black;"></div>
 <img id="vue-grand" src="pic.jpg" style=""/>
 <p id="vue-grand-descr" style="bottom:0;left:0;color:#fff;text-align: center;width:100%;font-size: 0.9em;">DESCR TEST</p>
