--- a/app/views/about.html
+++ b/app/views/about.html
@@ -4,7 +4,7 @@
     <div id="div-arrondi"></div>
     <div id="content-front">
         <span class="helper"></span>
-        <img id="imggggggggg" src="images/jm4_export.png" height="{{IMG_HEIGHT}}">
+        <img id="imggggggggg" src="images/jm4_export.png">
 
         <div id="texttitlenextgen">
             <h1>{{model.name}}</h1>
@@ -16,23 +16,23 @@
 
 
 
-<div class="centrer fond-bleu" id="fonfonfond" style="background: url('images/fond_haut.jpg') center center;">
+<!--<div class="centrer fond-bleu" id="fonfonfond" style="background: url('images/fond_haut.jpg') center center;">
   <div class="inside" id="inside-1">
     <p><a href="." id="lien-logo-header"><img style="border-radius: 50%;" src='images/jm4_export.png' height="100"/></a></p>
     <h1 class="">{{model.name}}</h1>
     <h2 class="">{{model.degree}}</h2>
   </div>
-</div>
+</div>-->
 
 <div class="centrer fond-clair" id="partie-2">
   <div class="inside">
 
-    <p style="color:#eee;text-align: right;font-style: italic;font-size: 0.7em;
+    <!--<p style="color:#eee;text-align: right;font-style: italic;font-size: 0.7em;
                margin:0;/*margin-top:-90px;*/position:relative;top:-90px;display:block;
                ">
-      Site en cours de développement. Dernière mise à jour le 30/11/2014.
+      Site en cours de refonte. Dernière mise à jour le 30/11/2014.
       <a href="../corps/Apropos.php">Ancienne version</a>
-    </p>
+    </p>-->
 
     <h2>Quelques mots</h2>
     <p style="text-align: justify; text-indent: 20px;">
@@ -148,5 +148,5 @@
   <div id="anim-rond" style="background:#fff; border-radius:50%;"></div><!--fc9-->
 </div>
 
-<div class="fond-bleu" id='voile-anim-debut' style="position:fixed;top:0;left:0;width: 100%;height:100%;opacity: 0;"></div>
+<!--<div class="fond-bleu" id='voile-anim-debut' style="position:fixed;top:0;left:0;width: 100%;height:100%;opacity: 0;"></div>-->
 
