WIP + importation mac + passage sous Gulp

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,4 +1,14 @@
 
+<style>
+    #bottom-arrow {
+        position: absolute;
+        bottom: 2%;
+        width: 100%;
+        color: #ddd;
+        text-align: center;
+        font-size: 1.5em;
+    }
+</style>
 <div id="first-screen-wrapper" style="width: 100%;">
     <div id="fond-persistant"></div>
     <div id="div-arrondi"></div>
@@ -12,6 +22,7 @@
         </div>
 
     </div>
+    <span id="bottom-arrow"><i class="fa fa-chevron-down"></i></span>
 </div>
 
 
@@ -109,6 +120,7 @@
         <td><img src="images/confiance/logo-ece.png"/></td>
         <td><img src="images/confiance/logo-No-Larsen.jpg" style="max-height: 75px;"/></td>
         <td><img src="images/confiance/logo_naxis.png"/></td>
+          <td>Excilys</td>
       </tr>
     </table>
     </p>
@@ -123,8 +135,10 @@
           <a id="lienIn" href="http://fr.linkedin.com/pub/jordan-mosseri/63/170/7b5" target="_blank"><img src="images/blank.png" alt="logo_in" /></a>
           <!-- http://www.linkedin.com/profile/view?id=224343929 -->
           <a id="lienContact" href="mailto:mosseri@ece.fr"><img src="images/blank.png" alt="icon mail" /></a>
+          <a>Github</a>
       </span>
     </p>
+      AngularJS
   </div>
 </div>
 
