--- a/app/styles/sass/style.scss
+++ b/app/styles/sass/style.scss
@@ -87,7 +87,7 @@ table {
     text-align: left;
     margin-left: 42%;
     list-style-type: circle;
-    list-style-image: url('../images/tiret.png');
+    list-style-image: url('../../images/tiret.png');
     vertical-align: top;
 }
 
@@ -157,7 +157,7 @@ table {
 }
 
 #lien-cv-test-parallax{
-    display:inline-block;width: 350px;height:350px;background:url('../images/CV-MOSSERI_gris.jpg') center top no-repeat;border-radius: 50%;
+    display:inline-block;width: 350px;height:350px;background:url('../../images/CV-MOSSERI_gris.jpg') center top no-repeat;border-radius: 50%;
     border: 3px solid rgba(0,0,0,0);
 }
 
@@ -183,7 +183,7 @@ table {
     border-radius: 50%;
 }
 #icones-footer a, #icones-footer a:hover{
-    background: url('../images/icones_site_v3_footer.png') no-repeat;
+    background: url('../../images/icones_site_v3_footer.png') no-repeat;
     background-size: auto 60px;
 }
 #icones-footer #lienIn{
@@ -234,3 +234,60 @@ table {
   position:absolute;
   pointer-events: none;
 }
+
+
+/*style_new*/
+
+#fond-persistant {
+//z-index: 49;
+    position: absolute;
+    left: 0; top: 0; width: 100%; height: 100%;
+    background: #697daf;
+}
+#div-arrondi {
+//z-index: 50;
+    position: absolute; border-radius: 50%; background: #E8E8E8;
+}
+#content-front {
+    opacity: 0;
+//z-index: 51;
+    position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+    text-align: center;
+//background: url('images/jm4_export.png') no-repeat center transparent; background-size: 100px;
+}
+#texttitlenextgen * {
+    color: #eee;
+    text-align: left;
+    margin-left: 10px;
+}
+#imggggggggg, #texttitlenextgen {
+    position: relative;
+    left: 0;
+}
+#imggggggggg {
+    display: inline-block; vertical-align: middle;
+}
+#texttitlenextgen {
+    display: inline-block; vertical-align: middle; overflow: hidden;
+}
+#texttitlenextgen > * {
+    position: relative; left: -100%;
+}
+.helper {
+    display: inline-block; height: 100%; vertical-align: middle;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+/*#first-screen-wrapper, #first-screen-wrapper * {
+    overflow: hidden;
+}
+
+#first-screen-wrapper {
+    z-index: 60;
+}
+#partie-2 {
+    z-index: 61;
+}*/
