--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,20 +1,10 @@
 
-<style>
-    #bottom-arrow {
-        position: absolute;
-        bottom: 2%;
-        width: 100%;
-        color: #ddd;
-        text-align: center;
-        font-size: 1.5em;
-    }
-</style>
-<div id="first-screen-wrapper" style="width: 100%;">
+<div id="first-screen-wrapper">
     <div id="fond-persistant"></div>
     <div id="div-arrondi"></div>
     <div id="content-front">
         <span class="helper"></span>
-        <img id="imggggggggg" src="images/jm4_export.png">
+        <img id="imggggggggg" src="images/jm4_export.png" />
 
         <div id="texttitlenextgen">
             <h1>{{model.name}}</h1>
